apps/media/ersatztv-macpro/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: ersatztv-macpro
    app.kubernetes.io/name: ersatztv-macpro
  name: ersatztv-macpro
  namespace: media
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: ersatztv-macpro
    app.kubernetes.io/name: ersatztv-macpro
  type: ClusterIP
