apps/media/ersatztv-macpro/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ersatztv-macpro-httproute
  namespace: media
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: default
  hostnames:
    - ersatztv-macpro.x.pmcd.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ersatztv-macpro
          kind: Service
          namespace: media
          port: 80
